// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ApprovalCard Component Tests rendering ApprovalCard: Renders an Approval Item with a decreased change in quantity 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#ffffffff",
      "flexDirection": "row",
      "justifyContent": "flex-start",
      "marginBottom": 4,
      "padding": 8,
    }
  }
>
  <Image
    source={
      Object {
        "uri": "../../assets/images/placeholder.png",
      }
    }
    style={
      Object {
        "height": 100,
        "resizeMode": "stretch",
        "width": 100,
      }
    }
  />
  <View
    style={
      Object {
        "alignItems": "flex-start",
        "flex": 1,
        "justifyContent": "center",
      }
    }
  >
    <Text
      style={
        Object {
          "color": "#8492a8",
          "fontSize": 14,
          "fontWeight": "bold",
        }
      }
    >
      [missing "en.ITEM.ITEM" translation] 456
    </Text>
    <View
      style={
        Object {
          "flexDirection": "row",
          "justifyContent": "space-between",
          "width": "100%",
        }
      }
    >
      <Text
        style={
          Object {
            "color": "#424242",
            "fontSize": 20,
            "fontWeight": "bold",
            "marginVertical": 8,
            "width": "80%",
          }
        }
      >
        Test Item 456
      </Text>
      <View
        style={
          Object {
            "justifyContent": "center",
            "marginHorizontal": 20,
          }
        }
      >
        <withTheme(Checkbox)
          color="#0071e9"
          onPress={[Function]}
          status="unchecked"
          uncheckedColor="#0071e9"
        />
      </View>
    </View>
    <View
      style={
        Object {
          "flexDirection": "row",
          "justifyContent": "space-between",
          "marginBottom": 6,
          "width": "40%",
        }
      }
    >
      <Text
        ellipsizeMode="tail"
        numberOfLines={1}
        style={
          Object {
            "color": "#8492a8",
            "fontSize": 16,
          }
        }
      >
        Associate Worker
      </Text>
      <Text
        style={
          Object {
            "color": "#616161",
            "fontSize": 16,
            "marginHorizontal": 4,
          }
        }
      >
        |
      </Text>
      <Text
        style={
          Object {
            "color": "#B40C00",
            "fontSize": 16,
            "fontWeight": "bold",
            "textAlign": "right",
          }
        }
      >
        [missing "en.APPROVAL.DAYS_LEFT" translation]
      </Text>
    </View>
    <View
      style={
        Object {
          "borderTopColor": "#bdbdbd",
          "borderTopWidth": 1,
          "flexDirection": "column",
          "width": "100%",
        }
      }
    >
      <View
        style={
          Object {
            "flexDirection": "row",
            "justifyContent": "space-between",
            "marginVertical": 6,
            "width": "100%",
          }
        }
      >
        <Text
          style={
            Object {
              "alignSelf": "center",
              "color": "#8492a8",
              "flexDirection": "column",
              "fontSize": 14,
            }
          }
        >
          [missing "en.APPROVAL.CURRENT_QUANTITY" translation]
        </Text>
        <Text
          style={
            Object {
              "alignSelf": "center",
              "color": "#545F7A",
              "fontSize": 16,
            }
          }
        >
          30
        </Text>
      </View>
      <View
        style={
          Object {
            "flexDirection": "row",
            "justifyContent": "space-between",
            "marginVertical": 6,
            "width": "100%",
          }
        }
      >
        <Text
          style={
            Object {
              "alignSelf": "center",
              "color": "#8492a8",
              "flexDirection": "column",
              "fontSize": 14,
            }
          }
        >
          [missing "en.APPROVAL.OH_CHANGE" translation]
        </Text>
        <View
          style={
            Object {
              "flexDirection": "row",
            }
          }
        >
          <Text
            style={
              Object {
                "alignSelf": "flex-start",
                "color": "#ab2703",
                "fontSize": 16,
                "fontWeight": "bold",
              }
            }
          >
            <Icon
              allowFontScaling={false}
              name="arrow-down"
              size={20}
            />
            $100.00
          </Text>
          <Text
            style={
              Object {
                "color": "#616161",
                "fontSize": 16,
                "marginHorizontal": 4,
              }
            }
          >
             | 
          </Text>
          <Text
            style={
              Object {
                "alignSelf": "flex-start",
                "color": "#ab2703",
                "fontSize": 16,
                "fontWeight": "bold",
              }
            }
          >
            -20
          </Text>
        </View>
      </View>
      <View
        style={
          Object {
            "borderTopColor": "#eeeeee",
            "borderTopWidth": 1,
            "flexDirection": "row",
            "justifyContent": "flex-end",
            "width": "100%",
          }
        }
      >
        <Text
          style={
            Object {
              "alignSelf": "center",
              "color": "#545F7A",
              "fontSize": 16,
              "fontWeight": "bold",
            }
          }
        >
          10
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`ApprovalCard Component Tests rendering ApprovalCard: Renders an Approval Item with a positive price change 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#ffffffff",
      "flexDirection": "row",
      "justifyContent": "flex-start",
      "marginBottom": 4,
      "padding": 8,
    }
  }
>
  <Image
    source={
      Object {
        "uri": "../../assets/images/placeholder.png",
      }
    }
    style={
      Object {
        "height": 100,
        "resizeMode": "stretch",
        "width": 100,
      }
    }
  />
  <View
    style={
      Object {
        "alignItems": "flex-start",
        "flex": 1,
        "justifyContent": "center",
      }
    }
  >
    <Text
      style={
        Object {
          "color": "#8492a8",
          "fontSize": 14,
          "fontWeight": "bold",
        }
      }
    >
      [missing "en.ITEM.ITEM" translation] 123
    </Text>
    <View
      style={
        Object {
          "flexDirection": "row",
          "justifyContent": "space-between",
          "width": "100%",
        }
      }
    >
      <Text
        style={
          Object {
            "color": "#424242",
            "fontSize": 20,
            "fontWeight": "bold",
            "marginVertical": 8,
            "width": "80%",
          }
        }
      >
        Test Item 123
      </Text>
      <View
        style={
          Object {
            "justifyContent": "center",
            "marginHorizontal": 20,
          }
        }
      >
        <withTheme(Checkbox)
          color="#0071e9"
          onPress={[Function]}
          status="unchecked"
          uncheckedColor="#0071e9"
        />
      </View>
    </View>
    <View
      style={
        Object {
          "flexDirection": "row",
          "justifyContent": "space-between",
          "marginBottom": 6,
          "width": "40%",
        }
      }
    >
      <Text
        ellipsizeMode="tail"
        numberOfLines={1}
        style={
          Object {
            "color": "#8492a8",
            "fontSize": 16,
          }
        }
      >
        Associate Employee
      </Text>
      <Text
        style={
          Object {
            "color": "#616161",
            "fontSize": 16,
            "marginHorizontal": 4,
          }
        }
      >
        |
      </Text>
      <Text
        style={
          Object {
            "color": "#B40C00",
            "fontSize": 16,
            "fontWeight": "bold",
            "textAlign": "right",
          }
        }
      >
        [missing "en.APPROVAL.DAYS_LEFT" translation]
      </Text>
    </View>
    <View
      style={
        Object {
          "borderTopColor": "#bdbdbd",
          "borderTopWidth": 1,
          "flexDirection": "column",
          "width": "100%",
        }
      }
    >
      <View
        style={
          Object {
            "flexDirection": "row",
            "justifyContent": "space-between",
            "marginVertical": 6,
            "width": "100%",
          }
        }
      >
        <Text
          style={
            Object {
              "alignSelf": "center",
              "color": "#8492a8",
              "flexDirection": "column",
              "fontSize": 14,
            }
          }
        >
          [missing "en.APPROVAL.CURRENT_QUANTITY" translation]
        </Text>
        <Text
          style={
            Object {
              "alignSelf": "center",
              "color": "#545F7A",
              "fontSize": 16,
            }
          }
        >
          5
        </Text>
      </View>
      <View
        style={
          Object {
            "flexDirection": "row",
            "justifyContent": "space-between",
            "marginVertical": 6,
            "width": "100%",
          }
        }
      >
        <Text
          style={
            Object {
              "alignSelf": "center",
              "color": "#8492a8",
              "flexDirection": "column",
              "fontSize": 14,
            }
          }
        >
          [missing "en.APPROVAL.OH_CHANGE" translation]
        </Text>
        <View
          style={
            Object {
              "flexDirection": "row",
            }
          }
        >
          <Text
            style={
              Object {
                "alignSelf": "flex-start",
                "color": "#33691E",
                "fontSize": 16,
                "fontWeight": "bold",
              }
            }
          >
            <Icon
              allowFontScaling={false}
              name="arrow-up"
              size={20}
            />
            $200.00
          </Text>
          <Text
            style={
              Object {
                "color": "#616161",
                "fontSize": 16,
                "marginHorizontal": 4,
              }
            }
          >
             | 
          </Text>
          <Text
            style={
              Object {
                "alignSelf": "flex-start",
                "color": "#33691E",
                "fontSize": 16,
                "fontWeight": "bold",
              }
            }
          >
            15
          </Text>
        </View>
      </View>
      <View
        style={
          Object {
            "borderTopColor": "#eeeeee",
            "borderTopWidth": 1,
            "flexDirection": "row",
            "justifyContent": "flex-end",
            "width": "100%",
          }
        }
      >
        <Text
          style={
            Object {
              "alignSelf": "center",
              "color": "#545F7A",
              "fontSize": 16,
              "fontWeight": "bold",
            }
          }
        >
          20
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`ApprovalCard Component Tests rendering ApprovalCard: Renders the Approval Item CheckBox as "checked"  1`] = `
<View
  style={
    Object {
      "backgroundColor": "#ffffffff",
      "flexDirection": "row",
      "justifyContent": "flex-start",
      "marginBottom": 4,
      "padding": 8,
    }
  }
>
  <Image
    source=""
    style={
      Object {
        "height": 100,
        "resizeMode": "stretch",
        "width": 100,
      }
    }
  />
  <View
    style={
      Object {
        "alignItems": "flex-start",
        "flex": 1,
        "justifyContent": "center",
      }
    }
  >
    <Text
      style={
        Object {
          "color": "#8492a8",
          "fontSize": 14,
          "fontWeight": "bold",
        }
      }
    >
      [missing "en.ITEM.ITEM" translation] 0
    </Text>
    <View
      style={
        Object {
          "flexDirection": "row",
          "justifyContent": "space-between",
          "width": "100%",
        }
      }
    >
      <Text
        style={
          Object {
            "color": "#424242",
            "fontSize": 20,
            "fontWeight": "bold",
            "marginVertical": 8,
            "width": "80%",
          }
        }
      >
        
      </Text>
      <View
        style={
          Object {
            "justifyContent": "center",
            "marginHorizontal": 20,
          }
        }
      >
        <withTheme(Checkbox)
          color="#0071e9"
          onPress={[Function]}
          status="checked"
          uncheckedColor="#0071e9"
        />
      </View>
    </View>
    <View
      style={
        Object {
          "flexDirection": "row",
          "justifyContent": "space-between",
          "marginBottom": 6,
          "width": "40%",
        }
      }
    >
      <Text
        ellipsizeMode="tail"
        numberOfLines={1}
        style={
          Object {
            "color": "#8492a8",
            "fontSize": 16,
          }
        }
      >
        
      </Text>
      <Text
        style={
          Object {
            "color": "#616161",
            "fontSize": 16,
            "marginHorizontal": 4,
          }
        }
      >
        |
      </Text>
      <Text
        style={
          Object {
            "color": "#B40C00",
            "fontSize": 16,
            "fontWeight": "bold",
            "textAlign": "right",
          }
        }
      >
        [missing "en.APPROVAL.DAYS_LEFT" translation]
      </Text>
    </View>
    <View
      style={
        Object {
          "borderTopColor": "#bdbdbd",
          "borderTopWidth": 1,
          "flexDirection": "column",
          "width": "100%",
        }
      }
    >
      <View
        style={
          Object {
            "flexDirection": "row",
            "justifyContent": "space-between",
            "marginVertical": 6,
            "width": "100%",
          }
        }
      >
        <Text
          style={
            Object {
              "alignSelf": "center",
              "color": "#8492a8",
              "flexDirection": "column",
              "fontSize": 14,
            }
          }
        >
          [missing "en.APPROVAL.CURRENT_QUANTITY" translation]
        </Text>
        <Text
          style={
            Object {
              "alignSelf": "center",
              "color": "#545F7A",
              "fontSize": 16,
            }
          }
        >
          0
        </Text>
      </View>
      <View
        style={
          Object {
            "flexDirection": "row",
            "justifyContent": "space-between",
            "marginVertical": 6,
            "width": "100%",
          }
        }
      >
        <Text
          style={
            Object {
              "alignSelf": "center",
              "color": "#8492a8",
              "flexDirection": "column",
              "fontSize": 14,
            }
          }
        >
          [missing "en.APPROVAL.OH_CHANGE" translation]
        </Text>
        <View
          style={
            Object {
              "flexDirection": "row",
            }
          }
        >
          <Text
            style={
              Object {
                "alignSelf": "center",
                "color": "#545F7A",
                "fontSize": 16,
                "fontWeight": "bold",
              }
            }
          >
            $0.00
          </Text>
          <Text
            style={
              Object {
                "color": "#616161",
                "fontSize": 16,
                "marginHorizontal": 4,
              }
            }
          >
             | 
          </Text>
          <Text
            style={
              Object {
                "alignSelf": "center",
                "color": "#545F7A",
                "fontSize": 16,
                "fontWeight": "bold",
              }
            }
          >
            0
          </Text>
        </View>
      </View>
      <View
        style={
          Object {
            "borderTopColor": "#eeeeee",
            "borderTopWidth": 1,
            "flexDirection": "row",
            "justifyContent": "flex-end",
            "width": "100%",
          }
        }
      >
        <Text
          style={
            Object {
              "alignSelf": "center",
              "color": "#545F7A",
              "fontSize": 16,
              "fontWeight": "bold",
            }
          }
        >
          0
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`ApprovalCard Component Tests rendering ApprovalCard: Renders the Approval Item CheckBox as "unchecked"  1`] = `
<View
  style={
    Object {
      "backgroundColor": "#ffffffff",
      "flexDirection": "row",
      "justifyContent": "flex-start",
      "marginBottom": 4,
      "padding": 8,
    }
  }
>
  <Image
    source=""
    style={
      Object {
        "height": 100,
        "resizeMode": "stretch",
        "width": 100,
      }
    }
  />
  <View
    style={
      Object {
        "alignItems": "flex-start",
        "flex": 1,
        "justifyContent": "center",
      }
    }
  >
    <Text
      style={
        Object {
          "color": "#8492a8",
          "fontSize": 14,
          "fontWeight": "bold",
        }
      }
    >
      [missing "en.ITEM.ITEM" translation] 0
    </Text>
    <View
      style={
        Object {
          "flexDirection": "row",
          "justifyContent": "space-between",
          "width": "100%",
        }
      }
    >
      <Text
        style={
          Object {
            "color": "#424242",
            "fontSize": 20,
            "fontWeight": "bold",
            "marginVertical": 8,
            "width": "80%",
          }
        }
      >
        
      </Text>
      <View
        style={
          Object {
            "justifyContent": "center",
            "marginHorizontal": 20,
          }
        }
      >
        <withTheme(Checkbox)
          color="#0071e9"
          onPress={[Function]}
          status="unchecked"
          uncheckedColor="#0071e9"
        />
      </View>
    </View>
    <View
      style={
        Object {
          "flexDirection": "row",
          "justifyContent": "space-between",
          "marginBottom": 6,
          "width": "40%",
        }
      }
    >
      <Text
        ellipsizeMode="tail"
        numberOfLines={1}
        style={
          Object {
            "color": "#8492a8",
            "fontSize": 16,
          }
        }
      >
        
      </Text>
      <Text
        style={
          Object {
            "color": "#616161",
            "fontSize": 16,
            "marginHorizontal": 4,
          }
        }
      >
        |
      </Text>
      <Text
        style={
          Object {
            "color": "#B40C00",
            "fontSize": 16,
            "fontWeight": "bold",
            "textAlign": "right",
          }
        }
      >
        [missing "en.APPROVAL.DAYS_LEFT" translation]
      </Text>
    </View>
    <View
      style={
        Object {
          "borderTopColor": "#bdbdbd",
          "borderTopWidth": 1,
          "flexDirection": "column",
          "width": "100%",
        }
      }
    >
      <View
        style={
          Object {
            "flexDirection": "row",
            "justifyContent": "space-between",
            "marginVertical": 6,
            "width": "100%",
          }
        }
      >
        <Text
          style={
            Object {
              "alignSelf": "center",
              "color": "#8492a8",
              "flexDirection": "column",
              "fontSize": 14,
            }
          }
        >
          [missing "en.APPROVAL.CURRENT_QUANTITY" translation]
        </Text>
        <Text
          style={
            Object {
              "alignSelf": "center",
              "color": "#545F7A",
              "fontSize": 16,
            }
          }
        >
          0
        </Text>
      </View>
      <View
        style={
          Object {
            "flexDirection": "row",
            "justifyContent": "space-between",
            "marginVertical": 6,
            "width": "100%",
          }
        }
      >
        <Text
          style={
            Object {
              "alignSelf": "center",
              "color": "#8492a8",
              "flexDirection": "column",
              "fontSize": 14,
            }
          }
        >
          [missing "en.APPROVAL.OH_CHANGE" translation]
        </Text>
        <View
          style={
            Object {
              "flexDirection": "row",
            }
          }
        >
          <Text
            style={
              Object {
                "alignSelf": "center",
                "color": "#545F7A",
                "fontSize": 16,
                "fontWeight": "bold",
              }
            }
          >
            $0.00
          </Text>
          <Text
            style={
              Object {
                "color": "#616161",
                "fontSize": 16,
                "marginHorizontal": 4,
              }
            }
          >
             | 
          </Text>
          <Text
            style={
              Object {
                "alignSelf": "center",
                "color": "#545F7A",
                "fontSize": 16,
                "fontWeight": "bold",
              }
            }
          >
            0
          </Text>
        </View>
      </View>
      <View
        style={
          Object {
            "borderTopColor": "#eeeeee",
            "borderTopWidth": 1,
            "flexDirection": "row",
            "justifyContent": "flex-end",
            "width": "100%",
          }
        }
      >
        <Text
          style={
            Object {
              "alignSelf": "center",
              "color": "#545F7A",
              "fontSize": 16,
              "fontWeight": "bold",
            }
          }
        >
          0
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`ApprovalCard Component Tests rendering Quantity On-Hands Change: Renders negative change in quantity 1`] = `
<View
  style={
    Object {
      "borderTopColor": "#bdbdbd",
      "borderTopWidth": 1,
      "flexDirection": "column",
      "width": "100%",
    }
  }
>
  <View
    style={
      Object {
        "flexDirection": "row",
        "justifyContent": "space-between",
        "marginVertical": 6,
        "width": "100%",
      }
    }
  >
    <Text
      style={
        Object {
          "alignSelf": "center",
          "color": "#8492a8",
          "flexDirection": "column",
          "fontSize": 14,
        }
      }
    >
      [missing "en.APPROVAL.CURRENT_QUANTITY" translation]
    </Text>
    <Text
      style={
        Object {
          "alignSelf": "center",
          "color": "#545F7A",
          "fontSize": 16,
        }
      }
    >
      30
    </Text>
  </View>
  <View
    style={
      Object {
        "flexDirection": "row",
        "justifyContent": "space-between",
        "marginVertical": 6,
        "width": "100%",
      }
    }
  >
    <Text
      style={
        Object {
          "alignSelf": "center",
          "color": "#8492a8",
          "flexDirection": "column",
          "fontSize": 14,
        }
      }
    >
      [missing "en.APPROVAL.OH_CHANGE" translation]
    </Text>
    <View
      style={
        Object {
          "flexDirection": "row",
        }
      }
    >
      <Text
        style={
          Object {
            "alignSelf": "flex-start",
            "color": "#ab2703",
            "fontSize": 16,
            "fontWeight": "bold",
          }
        }
      >
        <Icon
          allowFontScaling={false}
          name="arrow-down"
          size={20}
        />
        $100.00
      </Text>
      <Text
        style={
          Object {
            "color": "#616161",
            "fontSize": 16,
            "marginHorizontal": 4,
          }
        }
      >
         | 
      </Text>
      <Text
        style={
          Object {
            "alignSelf": "flex-start",
            "color": "#ab2703",
            "fontSize": 16,
            "fontWeight": "bold",
          }
        }
      >
        -20
      </Text>
    </View>
  </View>
  <View
    style={
      Object {
        "borderTopColor": "#eeeeee",
        "borderTopWidth": 1,
        "flexDirection": "row",
        "justifyContent": "flex-end",
        "width": "100%",
      }
    }
  >
    <Text
      style={
        Object {
          "alignSelf": "center",
          "color": "#545F7A",
          "fontSize": 16,
          "fontWeight": "bold",
        }
      }
    >
      10
    </Text>
  </View>
</View>
`;

exports[`ApprovalCard Component Tests rendering Quantity On-Hands Change: Renders no change arrow if oldOHQuantity and newOHQuantity are zero 1`] = `
<View
  style={
    Object {
      "borderTopColor": "#bdbdbd",
      "borderTopWidth": 1,
      "flexDirection": "column",
      "width": "100%",
    }
  }
>
  <View
    style={
      Object {
        "flexDirection": "row",
        "justifyContent": "space-between",
        "marginVertical": 6,
        "width": "100%",
      }
    }
  >
    <Text
      style={
        Object {
          "alignSelf": "center",
          "color": "#8492a8",
          "flexDirection": "column",
          "fontSize": 14,
        }
      }
    >
      [missing "en.APPROVAL.CURRENT_QUANTITY" translation]
    </Text>
    <Text
      style={
        Object {
          "alignSelf": "center",
          "color": "#545F7A",
          "fontSize": 16,
        }
      }
    >
      0
    </Text>
  </View>
  <View
    style={
      Object {
        "flexDirection": "row",
        "justifyContent": "space-between",
        "marginVertical": 6,
        "width": "100%",
      }
    }
  >
    <Text
      style={
        Object {
          "alignSelf": "center",
          "color": "#8492a8",
          "flexDirection": "column",
          "fontSize": 14,
        }
      }
    >
      [missing "en.APPROVAL.OH_CHANGE" translation]
    </Text>
    <View
      style={
        Object {
          "flexDirection": "row",
        }
      }
    >
      <Text
        style={
          Object {
            "alignSelf": "center",
            "color": "#545F7A",
            "fontSize": 16,
            "fontWeight": "bold",
          }
        }
      >
        $0.00
      </Text>
      <Text
        style={
          Object {
            "color": "#616161",
            "fontSize": 16,
            "marginHorizontal": 4,
          }
        }
      >
         | 
      </Text>
      <Text
        style={
          Object {
            "alignSelf": "center",
            "color": "#545F7A",
            "fontSize": 16,
            "fontWeight": "bold",
          }
        }
      >
        0
      </Text>
    </View>
  </View>
  <View
    style={
      Object {
        "borderTopColor": "#eeeeee",
        "borderTopWidth": 1,
        "flexDirection": "row",
        "justifyContent": "flex-end",
        "width": "100%",
      }
    }
  >
    <Text
      style={
        Object {
          "alignSelf": "center",
          "color": "#545F7A",
          "fontSize": 16,
          "fontWeight": "bold",
        }
      }
    >
      0
    </Text>
  </View>
</View>
`;

exports[`ApprovalCard Component Tests rendering Quantity On-Hands Change: Renders positive change in quantity 1`] = `
<View
  style={
    Object {
      "borderTopColor": "#bdbdbd",
      "borderTopWidth": 1,
      "flexDirection": "column",
      "width": "100%",
    }
  }
>
  <View
    style={
      Object {
        "flexDirection": "row",
        "justifyContent": "space-between",
        "marginVertical": 6,
        "width": "100%",
      }
    }
  >
    <Text
      style={
        Object {
          "alignSelf": "center",
          "color": "#8492a8",
          "flexDirection": "column",
          "fontSize": 14,
        }
      }
    >
      [missing "en.APPROVAL.CURRENT_QUANTITY" translation]
    </Text>
    <Text
      style={
        Object {
          "alignSelf": "center",
          "color": "#545F7A",
          "fontSize": 16,
        }
      }
    >
      5
    </Text>
  </View>
  <View
    style={
      Object {
        "flexDirection": "row",
        "justifyContent": "space-between",
        "marginVertical": 6,
        "width": "100%",
      }
    }
  >
    <Text
      style={
        Object {
          "alignSelf": "center",
          "color": "#8492a8",
          "flexDirection": "column",
          "fontSize": 14,
        }
      }
    >
      [missing "en.APPROVAL.OH_CHANGE" translation]
    </Text>
    <View
      style={
        Object {
          "flexDirection": "row",
        }
      }
    >
      <Text
        style={
          Object {
            "alignSelf": "flex-start",
            "color": "#33691E",
            "fontSize": 16,
            "fontWeight": "bold",
          }
        }
      >
        <Icon
          allowFontScaling={false}
          name="arrow-up"
          size={20}
        />
        $200.00
      </Text>
      <Text
        style={
          Object {
            "color": "#616161",
            "fontSize": 16,
            "marginHorizontal": 4,
          }
        }
      >
         | 
      </Text>
      <Text
        style={
          Object {
            "alignSelf": "flex-start",
            "color": "#33691E",
            "fontSize": 16,
            "fontWeight": "bold",
          }
        }
      >
        15
      </Text>
    </View>
  </View>
  <View
    style={
      Object {
        "borderTopColor": "#eeeeee",
        "borderTopWidth": 1,
        "flexDirection": "row",
        "justifyContent": "flex-end",
        "width": "100%",
      }
    }
  >
    <Text
      style={
        Object {
          "alignSelf": "center",
          "color": "#545F7A",
          "fontSize": 16,
          "fontWeight": "bold",
        }
      }
    >
      20
    </Text>
  </View>
</View>
`;
